<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".ui.secondhw.implicitintents.ImplicitIntentsFragment">

        <EditText
            android:id="@+id/website_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/website_edittext_default_text" />

        <Button
            android:id="@+id/open_website_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/open_website_button_text" />

        <EditText
            android:id="@+id/location_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location_edittext_default_text" />

        <Button
            android:id="@+id/open_location_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/open_location_button_text" />

        <EditText
            android:id="@+id/share_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/share_edittext_default_text" />

        <Button
            android:id="@+id/share_text_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/share_text_button_text" />

        <Button
            android:id="@+id/take_picture_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/take_picture_button_text" />


    </LinearLayout>

</ScrollView>

